# tidal-hqplayer-eversolo

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  server.py
static/: index.html
tests/: conftest.py  test_hqplayer.py  test_queue.py  test_routes.py  test_streaming.py  test_tidal.py
tidal_hqp/: __init__.py  app.py  config.py  gpu_routes.py  hqplayer_routes.py
tidal_hqp/hqplayer/: client.py  configure.py
tidal_hqp/playback/: player.py  queue.py  queue_routes.py  routes.py
tidal_hqp/streaming/: downloader.py  proxy.py  state.py
tidal_hqp/tidal/: browse.py  routes.py  session.py
